# pharma_copilot

./: .env.example  .gitignore  FEATURE_IMPLEMENTATION_ROADMAP.md  LICENSE  Others.txt  README.md  improvements_checklist.md  main.py  milestones.md  pyproject.toml  roadmap.md
app/: ollama_test.py  streamlit_app.py
chunkers/: __init__.py  structural_chunker.py
models/: __init__.py  answering.py  chroma_store.py  retrieval_encoder.py  retriever.py
outputs/: normalized_docx_blocks.json  normalized_ingestion_blocks.json  normalized_pdf_blocks.json  normalized_ppt_blocks.json  normalized_ppt_slides.json  normalized_xlsx_blocks.json  structural_chunks.json
parsed_outputs/: docx_parsed_output.json
parsers/: docx_parser.py  docx_parser_main.py  pdf_parser.py  ppt_parser.py  xlsx_parser.py
runners/: __init__.py  run_chroma_store.py  run_docx_parser.py  run_ingestion.py  run_pdf_parser.py  run_ppt_parser.py  run_retrieval_encoder.py  run_retriever.py  run_structural_chunker.py  run_xlsx_parser.py
tests/: test_answering.py  test_chroma_store.py  test_ingestion_runner.py  test_parser_normalization.py  test_pdf_parser.py  test_retrieval_encoder.py  test_retriever.py  test_structural_chunker.py
utils/: text_normalization.py
