[project]
name = "pharma-copilot"
version = "0.1.0"
description = "A python based RAG project to learn document ingestion, chunking, embeddings, retrieval, and grounded answer generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "pypdf",
    "python-docx",
    "pytest",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
]
